# remoteAPTclient

./: CMakeLists.txt  Makefile  config.h.in  createInstalled  installed.h  installed_dynamic.cxx  installed_dynamic_apt.cxx  installed_dynamic_pacman.cxx  installed_file.cxx  main.cxx  remoteAPTclient.cxx  remoteAPTclient.sh.in
packagemanager/: apt.cxx  common.cxx  pacman.cxx
packagemanager/apt/: execute.cxx  installed_dynamic.cxx
packagemanager/common/: execute.cxx  execute.h  installed_dynamic.h
packagemanager/pacman/: execute.cxx  installed_dynamic.cxx
